# MahjongAI

./: .env.example  .gitignore  COMMANDS.md  README.md  bot.py  pyproject.toml
config/: default.toml
results/: allyears_ranked.jsonl  allyears_v3_ext_ranked.jsonl  allyears_v3_results.jsonl  allyears_v4_offline.json  allyears_v4_offline_actual.json  allyears_v4_ranked.jsonl  allyears_v5_local.json  allyears_v5_offline.json  allyears_v5_ranked.jsonl  allyearsv2_ranked.jsonl  competitive_v1_local.json  competitive_v1_offline.json  e2_local.json  e2_offline.json  e3_local.json  e3_offline.json  e4_local.json  e4_offline.json  ei_local.json  ei_offline.json  eval_fallback.json  eval_local.json  eval_model.json  fallback_local.json  fallback_only_local.json  offline_model.json  ranked_competitive_v1.jsonl  ranked_fb.jsonl  ranked_runs.jsonl  rl_greed_v1__ranked.jsonl  rl_vs_sl_tournament.skipped.json  test100k_local.json  test100k_offline.json  test170k_local.json  test170k_offline.json  v5_vs_fallback_opponent_local.json  v5_vs_random_allseats_local.json  v5_vs_random_seat0_local.json
scripts/: format_informe_docx.py  run_ranked_games.py  run_rl_vs_sl_tournament.sh  summarize_results.py  train_allyears_v4.sh  train_allyears_v5.sh
src/mahjong_ai/: __init__.py  agents.py  bot_runner.py  config.py  data.py
src/mahjong_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mahjong_ai/agents/: __init__.py  akochan.py  mortal.py  stats.py
src/mahjong_ai/evaluation/: discard_metrics.py  (+1 more)
tests/: test_fallback_counts.py  test_smoke.py
(+7 files in other folders)
